fix: 修复ruoyi-nocode和nocode-api-generator编译错误
ruoyi-nocode修复:
- 修复7个实体类继承问题(SysLogininfor,SysOperLog,SysDictType,
  SysJobLog,SysJob,SysConfig,SysDictData)，改为继承BaseEntity
- 移除多余的@Serial注解
- AjaxResult添加error(String,Object)重载方法
- OnlineUserServiceImpl适配sa-token新API
- SysJobServiceImpl适配Hutool CronUtil API变化
- DatabaseBackupTask添加IOException处理
- 测试文件反射调用try-catch包装

nocode-api-generator修复:
- ApiResult改为泛型类ApiResult<T>
- 修复FormConfigService JDK8 API兼容问题